PluginClassLoader v2.3.2 - addUrl improvement